tests/specs/ecosystem/jotai/jotai/2_7_0_jsr_0.test
jotai/jotai/2.7.0-jsr.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:react@^18.2.0": "npm:react@18.3.1"
    },
    "npm": {
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react@18.3.1": {
        "integrity": "sha512-wS+hAgJShR0KhEvPJArfuPVN1+Hz1t0Y6n5jLrGQbkb4urgPE/0Rve+1kMB1v/oWgHgm4WIcV+i7F2pTVj+2iQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS1170 [ERROR]: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
  [Symbol.observable]?: () => ObservableLike<T> | undefined;
  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/vanilla/utils/atomWithObservable.ts:12:3

TS2339 [ERROR]: Property 'observable' does not exist on type 'SymbolConstructor'.
  [Symbol.observable]?: () => ObservableLike<T> | undefined;
          ~~~~~~~~~~
    at file://<tmpdir>/src/vanilla/utils/atomWithObservable.ts:12:11

Found 2 errors.

error: Type checking failed.

